[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvocab"
description = "Simple python-based vocabulary builder"
readme = "README.md"
requires-python = ">=3.8"
version = "22.9.11"
authors = [
    "Srinivas Gorur-Shandilya <code@srinivas.gs>",
]

license = {text = "GPLv3 License"}
classifiers = [
    "Framework :: streamlit",
    "Programming Language :: Python :: 3",
]
dependencies = [
        "pandas>=1.3.2",
        "watchdog",
        "streamlit>=1.11.0",
        "interrogate>=1.0",
        "python-Levenshtein",
        "pycore @ git+https://github.com/sg-s/pycore.git",
]


[project.optional-dependencies]
dev = ["pytest"]


