[tool.poetry]
name = "pyvocab"
version = "23.1.10"
description = ""
authors = ["Srinivas Gorur-Shandilya <code@srinivas.gs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.16.0"
pandas = "^1.5.2"
watchdog = "^2.2.1"
pycore = {git = "https://github.com/sg-s/pycore.git"}
python-levenshtein = "^0.20.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"
debugpy = "1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
